--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.4"
+axum-extra = { version = "0.10.1", features = ["cookie"] }
 dotenv = "0.15.0"
 maud = "0.27.0"
 serde = { version = "1.0.219", features = ["derive"] }
