--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["ws"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 dotenv = "0.15.0"
 maud = "0.27.0"
@@ -19,3 +19,4 @@ sqlx = { version = "0.8", default-features = false, features = [
     "macros",
 ] }
 anyhow = "1.0.99"
+serde_json = "1.0.143"
