--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ sqlx = { version = "0.8", default-features = false, features = [
 ] }
 anyhow = "1.0.99"
 serde_json = "1.0.143"
+once_cell = "1.21.3"
