--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["ws"] }
+axum = { version = "0.8.4", features = ["ws", "http1"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 dotenv = "0.15.0"
 maud = "0.27.0"
@@ -21,3 +21,4 @@ sqlx = { version = "0.8", default-features = false, features = [
 anyhow = "1.0.99"
 serde_json = "1.0.143"
 once_cell = "1.21.3"
+futures = "0.3.31"
